--- a/rendering-demo/package.json
+++ b/rendering-demo/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@types/react-slick": "^0.23.13",
+    "client-only": "^0.0.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
+    "server-only": "^0.0.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
